<resources>
    <string name="app_name">JenJOBS</string>
    <string name="action_settings">Settings</string>
    <string name="local_service_started">local_service_started</string>
    <string name="local_service_label">local_service_label</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="forgot_text">Forgot Password</string>
    <string name="jenjobs_logo">JenJOBS Logo</string>
    <string name="no_value" />
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="icno">I/C</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="dob">DoB</string>
    <string name="country">Country</string>
    <string name="online_resume">Online Resume</string>
    <string name="resume_visibility">Resume Visibility</string>
    <string name="jobseeking_information">Jobseeking Information</string>
    <string name="job_preferences">Job Preferences</string>
    <string name="work_experience">Work Experience</string>
    <string name="highest_education">Highest Education</string>
    <string name="skill">Skill</string>
    <string name="languages">Languages</string>
    <string name="attached_resume">Attached Resume</string>
    <string name="additional_info">Additional Info</string>
    <string name="update_additional_info">Update Additional Info</string>
    <string name="open">Open</string>
    <string name="hidden">Hidden</string>
    <string name="limited">Limited</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dignissim, lacus ac semper varius, leo mi hendrerit leo, vitae ornare quam ipsum condimentum diam.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="my_profile">My Profile</string>
    <string name="job_search">Job Search</string>
    <string name="application">Application</string>
    <string name="request_password_reset">Request Password Reset</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="profile_image">Profile image</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="job_description">Job Description</string>
    <string name="job_title">Position Title</string>
    <string name="company">Company</string>
    <string name="salary">Salary</string>
    <string name="date_closed">Date Closed</string>
    <string name="closed_on">Closed on</string>
    <string name="job_type">Job Type</string>
    <string name="job_location">Location</string>
    <string name="filter_job">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="search_keyword_by">Search keyword by</string>
    <string name="keyword">Keyword</string>
    <string name="mininum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="spec_and_role">Specialisation and Role</string>
    <string name="location">Location</string>
    <string name="position_level">Position Level</string>
    <string name="posted_by">Posted By</string>
    <string name="direct_employer">Direct Employer</string>
    <string name="ra">Company Undisclosed / Recruitment Agency</string>
    <string name="Other_Preferred_Countries">Other Preferred Countries</string>
    <string name="experience_info">Describe your experience</string>
    <string name="work_location">Preferred Working Location in Malaysia</string>
    <string name="internship">Internship</string>
    <string name="part_time">Part-Time/Temporary</string>
    <string name="contract">Contract</string>
    <string name="permanent">Permanent</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="preferred_job_type">Preferred Job Type</string>
    <string name="resume">Please upload your resume</string>
    <string name="file_supported">File supported : doc, docx, pdf, odt, ppt, txt</string>
    <string name="file_size">File Size Limit : 5 MB</string>
    <string name="browse_resume">Browse..</string>
    <string name="save_resume">Save Resume</string>
    <string name="save_preference">Save Job Preference</string>
    <string name="stay_in">Currently Stay In</string>
    <string name="actively_looking_text">Actively Looking</string>
    <string name="good_offer_text">Open to Good Offer</string>
    <string name="satisfied_job">Satisfied with Current Job</string>
    <string name="job_status">Current jobseeking status</string>
    <string name="current_stay_in">Current stay in</string>
    <string name="state">State</string>
    <string name="malaysia_state">States in Malaysia</string>
    <string name="start_job">I can start new job after notice of</string>
    <string name="license">Have a valid license to drive in Malaysia</string>
    <string name="transport">Possess own transport</string>
    <string name="save_info">Save Information</string>
    <string name="company_name">Company Name</string>
    <string name="employment_type">Employment Type</string>
    <string name="job_level">Job Level</string>
    <string name="month_salary">Monthly Salary</string>
    <string name="specilisation">Specialisation</string>
    <string name="sub_specilisation">Sub Specialisation</string>
    <string name="company_industry">Company Industry</string>
    <string name="date_start">Date Start</string>
    <string name="month_start">Month Start</string>
    <string name="year_start">Year Start</string>
    <string name="end_date">End Date</string>
    <string name="month_end_date">Month End Date</string>
    <string name="year_end">Year End Date</string>
    <string name="save_experience">Save Experience</string>
    <string name="school">School/University</string>
    <string name="education">Education Major</string>
    <string name="field_study">Field of Study</string>
    <string name="grade">Grade</string>
    <string name="year_graduation">Year Graduation</string>
    <string name="education_level">Education Level</string>
    <string name="education_info">Education Info</string>
    <string name="education_major">Education Major</string>
    <string name="save_education">Save</string>
    <string name="language">Language</string>
    <string name="native_language">Native</string>
    <string name="native_button">Native</string>
    <string name="spoken">Spoken</string>
    <string name="add_language">Add Language</string>
    <string name="update_language">Update Language</string>
    <string name="written_text">Written</string>
    <string name="save_language">Save Language</string>
    <string name="nationality">Nationality</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email2">Email, also your Login ID</string>
    <string name="changeEmail">To change email, please go to My Account</string>
    <string name="dial_code">Country Dial Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sms_job_alert">SMS me exclusive job alert</string>
    <string name="save_profile">Save Profile</string>
    <string name="skills">Skills</string>
    <string name="malaysia">Malaysia</string>
    <string name="other">Other Countries</string>
    <string name="job_search_filter">Job Search Filter</string>
    <string name="Search">Search</string>
    <string name="ok">OK</string>
    <string name="update_work_exp">Update Work Experience</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="add_work_exp">Add Work Experience</string>
    <string name="role">Job Role</string>
    <string name="spec">Job Specialisation</string>
    <string name="update_education">Update Education</string>
    <string name="add_education">Add Education</string>
    <string name="update_job_preference">Update Job Preference</string>
    <string name="update_job_seeking">Update Jobseeking</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks(s)</string>
    <string name="months">Month(s)</string>
    <string name="immediately">Immediately</string>
    <string name="no_work_experience">No work experience.</string>
    <string name="no_education">No education record.</string>
    <string name="add_skill">Add Skill</string>
    <string name="no_skill">No skill added.</string>
    <string name="no_language">No language added.</string>
    <string name="update_resume_visibility">Update Resume Visibility</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="close">x</string>
    <string name="limit3000">Do not exceed 3000 characters</string>
    <string name="limit3000hint">Highlight your unique experience,ambitions and strengths, such as training taken, commercial driving licenses,awards/prizes won and etc.</string>
    <string name="summary">Summary</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="secondaryemail">Secondary Email</string>
    <string name="confirm">Are you sure?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exp2">Optional but important to employer</string>
    <string name="end_date2">Leave blank for current job</string>
    <string name="notice_period">Notice Period</string>
    <string name="back">Back</string>
    <string name="bookmark">Bookmark</string>
    <string name="apply">Apply</string>
    <string name="qualification">Qualification</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="employer">Employer</string>
    <string name="company_logo">Company Logo</string>
    <string name="registration_number">Registration Number</string>
    <string name="industry">Company Industry</string>
    <string name="working_hours">Working Hours</string>
    <string name="benefits">Benefits</string>
    <string name="website">Website</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="worklocation">Work Location</string>
    <string-array name="availability_unit">
        <item name="D">Day</item>
        <item name="W">Week</item>
        <item name="M">Month</item>
    </string-array>
    <string-array name="notification_frequency">
        <item name="D">Daily</item>
        <item name="W">Weekly</item>
        <item name="U">Unsubscribe</item>
    </string-array>
    <string name="title_activity_job_details2">Job Details</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="already_applied">Already Applied</string>
    <string name="notification_alert">Notification Alert</string>
    <string name="notification_alert_desc">Show notification when you received invitation from employers, job application updates</string>
    <string name="newsletter_desc">Emails of newsletter, promotion, career advise from JenJOBS</string>
    <string name="partners_desc">Promotion email from JenJOBS partners and affiliates</string>
    <string name="withdraw">Withdraw</string>
    <string name="applied_on">Applied on</string>
    <string name="status">Status</string>
    <string name="sms_desc">SMS Job Alert</string>
    <string name="update_profile">Update</string>
    <string name="about">About Us</string>
    <string name="save_filter">Save Search</string>
    <string name="job_search_profiles">Job Search Profiles</string>
</resources>