<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.william.myapplication.ProfileActivity">

    <item
        android:id="@+id/filter_job_button"
        android:title="@string/filter_job"
        android:icon="@drawable/ic_filter_outline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save_filter_button"
        android:title="@string/save_filter"
        android:icon="@drawable/ic_save_white_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/job_search_profile_list"
        android:title="@string/job_search_profiles"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/about_job_ads"
        android:title="@string/about"
        app:showAsAction="collapseActionView" />

</menu>
