<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.william.myapplication.UpdateAdditionalInfo"
    style="@style/AppThemePadding10"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theInfo"
            android:digits="3000"
            android:inputType="text|textMultiLine"
            android:lines="6"
            android:maxLines="20"
            android:hint="@string/summary"
            style="@style/AppThemeBaseTextValue"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/limit3000hint"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/limit3000"
            android:textColor="#f90808"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/okButton"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
